# ocaml-type-system

./: README.md  dune-project
lib/: dune  lexer.mll  parser.mly  stacks.ml
test/: example
